Kleopatra: Report failed imports immediately when importing multiple files
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Dec 6 2022, 9:57 AM
Tags

Description

From T6152: Allow giving context to gpg-agent:

If you enter a wrong password in a window, the error message will only be given after you have answered all requests for the transport passwords.
If we should want to support importing several of these at once, that is impractical.

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

A failed import is now reported immediately when the file was processed.

The downside is that now several dialogs "fight" for the user's attention if multiple files are imported: the progress dialog, one or more error dialogs, and a password dialog. But I think the usability of giving early feedback after entering a wrong passphrase is worth the minor inconvenience of multiple dialogs.

ikloecker changed the task status from Open to Testing.Dec 6 2022, 10:15 AM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo added a subscriber: ebo.

works.

Would work better if every attention craving window would refer to the file resp certificate it addresses but that is covered by T6152