Report failed imports immediately when receiving the result

This way the user gets immediate feedback when they entered a wrong
password.

Moreover, with this change Kleopatra now always shows the import summary.
Previously, it was only shown if the import of all files succeeded.

GnuPG-bug-id: 6302